2006-01-12  Ben Maurer  <bmaurer@andrew.cmu.edu>

	* ConsoleTraceListener.cs: New 2.0 class

2005-11-17  Dick Porter  <dick@ximian.com>

	* Process.cs: Split Start_common into Start_shell and
	Start_noshell, which call ShellExecuteEx and CreateProcess
	respectively.  Fixes bug 76670.

2005-09-21 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Process.cs: deal with the fact that someone can enable raising events
	and/or registed a Exited delegate before and *after* Start is called for
	the process. Only queue the exit callback in the threadpool when it's
	possible and requested. Fixes bug #76129.

2005-08-09  Gert Driesen <drieseng@users.sourceforge.net>

	* EventLog.cs: Fixed Designer attribute to match MS.NET.
	* ICollectData.cs: Added marshalling attribute to match MS.NET.
	* PerformanceCounter.cs: Fixed Designer attribute to match MS.NET.
	* Process.cs: Fixed Designer attribute to match MS.NET, modified
	* ProcessModule.cs: Fixed Designer attribute to match MS.NET.
	* ProcessThread.cs: Fixed Designer attribute to match MS.NET.
	DesignerSerializationVisibility on StartInfo to match MS.NET, changed
	Category attribute on Exited event to match MS.NET.

2005-06-09  Gert Driesen <drieseng@users.sourceforge.net>

	* TraceImpl.cs: Adjust internal indentlevel and indentsize before 
	passing on to listeners. Fixes some test failures.

2005-06-07 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* DefaultTraceListener.cs: s/MONO_TRACE/MONO_TRACE_LISTENER/. The
	runtime uses MONO_TRACE too...

2005-05-31  Sebastien Pouliot  <sebastien@ximian.com>

	* PerformanceCounterPermissionEntry.cs: Added more 2.0 validations for
	machine names and PerformanceCounterPermissionAccess.

2005-02-22 Jonathan Pryor  <jonpryor@vt.edu>

	* TraceImpl.cs: More Thread-safety fixes.  I have to lock on
	  Listeners.SyncRoot as we're traversing the collection and can't let the
	  collection change from underneath us while we're iterating over it